--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
     "gargron/fileupload": "~1.4.0",
     "league/csv": "^9.15.0",
     "gamajo/template-loader": "^1.3",
-	"brianhenryie/strauss": "^0.19.0",
     "z4kn4fein/php-semver": "^3.0",
     "monolog/monolog": "^2.9"
   },
@@ -22,7 +21,8 @@
     "php-stubs/wp-cli-stubs": "^2.10",
     "captainhook/captainhook-phar": "^5.23",
     "vimeo/psalm": "^5.25.0",
-    "humanmade/psalm-plugin-wordpress": "^3.1"
+    "humanmade/psalm-plugin-wordpress": "^3.1",
+	"brianhenryie/strauss": "^0.19.0"
   },
   "license": "GPL-2.0-or-later",
   "autoload": {
@@ -91,7 +91,17 @@
 		"namespace_prefix": "Govpack\\Vendor\\",
         "classmap_prefix": "Govpack_Vendor_",
 		"update_call_sites": false,
-		"delete_vendor_packages": true
+		"exclude_from_prefix" : {
+			"packages": [
+				"woocommerce/action-scheduler"
+            ]
+		},
+		"override_autoload" : {
+			"woocommerce/action-scheduler" : {
+				"classmap": ["./"],
+				"files": ["action-scheduler.php"]
+			}
+		}
 	}
   },
   "config": {
