added block-editor script

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "config": {
     "entrypoints": {
       "editor": "./src/editor/index.js",
+	  "block-editor": "./src/editor/block-editor.js",
       "admin": "./src/admin/index.js",
       "importer": "./src/importer/index.js",
       "frontend": "./src/frontend/index.js",
