--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "url": "https://github.com/govpack-wp/govpack-plugin/issues"
   },
   "dependencies": {
-    "@wordpress/icons": "^6.1.1",
+    "@wordpress/icons": "^10.9.0",
     "axios": "^0.24.0",
-    "react-input-mask": "^2.0.4"
+    "react-input-mask": "^2.0.4",
+	"classnames" : "^2.5.1"
   },
   "devDependencies": {
-    "@wordpress/scripts": "^27.6.0",
+    "@wordpress/scripts": "^30.1.0",
 	"jscpd": "^3.5.10"
   },
   "config": {
