--- a/composer.json
+++ b/composer.json
@@ -38,9 +38,11 @@
 	"classmap": ["bin/scripts/"]
   },
   "scripts": {
+    
     "prefix-namespaces": [
-        "strauss",
-		"composer dump-autoload"
+        "sh -c 'test -f ./bin/strauss.phar || curl -o bin/strauss.phar -L -C - https://github.com/BrianHenryIE/strauss/releases/latest/download/strauss.phar'",
+        "@php bin/strauss.phar",
+        "@php composer dump-autoload"
     ],
 	"pre-install-cmd" : [
 		"mkdir -p ./vendor-prefixed"
