--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -42,10 +42,15 @@ jobs:
       - name: Generate WP Archive
         id: generate-archive
         uses: ./.github/actions/wp-cli-dist-archive
+        with: 
+          path: .
+          target: ./artifacts/newspack-elections-${{github.run_number}}.zip
+          plugin-dirname: "newspack-elections"
+          format: "zip"
+          filename-format: "{name}.{version}"
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{steps.generate-archive.outputs.filename}}
-          path: ./artifacts/*
-
+            name: ${{steps.generate-archive.outputs.filename}}
+            path: ./artifacts/*
