--- a/.github/actions/wp-cli-dist-archive/action.yml
+++ b/.github/actions/wp-cli-dist-archive/action.yml
@@ -51,5 +51,5 @@ runs:
         INPUT_FILENAME_FORMAT: ${{ inputs.filename-format }}
     - name: Get The File Name
       id: get-file-name
-      run: "echo filename=$(sed -E -e 's/^(Success: Created )//g' -e 's/zip \(S.*/zip/g' <<< \"${{ steps.generate-archive.outputs.response }}\") >> $GITHUB_OUTPUT"
+      run: "echo filename=$(sed -E -e 's/^(Success: Created )//g' -e 's/zip \\(S.*/zip/g' <<< \"${{ steps.generate-archive.outputs.response }}\") >> $GITHUB_OUTPUT"
       shell: bash
