--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     "prefix-namespaces": [
         "sh -c 'test -f ./bin/strauss.phar || curl -o bin/strauss.phar -L -C - https://github.com/BrianHenryIE/strauss/releases/latest/download/strauss.phar'",
         "@php bin/strauss.phar",
-        "@php composer dump-autoload"
+        "@composer dump-autoload"
     ],
 	"pre-install-cmd" : [
 		"mkdir -p ./vendor-prefixed"
