--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
   "scripts": {
     
     "prefix-namespaces": [
-        "sh -c 'test -f ./bin/strauss.phar || curl -o bin/strauss.phar -L -C - https://github.com/BrianHenryIE/strauss/releases/latest/download/strauss.phar'",
+        "sh -c 'test -f ./bin/strauss.phar || curl -o bin/strauss.phar -L -C - https://github.com/BrianHenryIE/strauss/releases/download/0.19.5/strauss.phar'",
         "@php bin/strauss.phar",
         "@composer dump-autoload"
     ],
