--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "@emotion/styled": "^11.13.5",
     "@mona-health/react-input-mask": "^3.0.3",
     "@wordpress/icons": "^10.9.0",
-    "axios": "^0.24.0",
-    "classnames": "^2.5.1"
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@wordpress/scripts": "^30.1.0",
