small tweak to creating the zip artifact'

--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -44,7 +44,7 @@ jobs:
         uses: ./.github/actions/wp-cli-dist-archive
         with: 
           path: .
-          target: ./artifacts/newspack-elections-${{github.run_number}}.zip
+          target: ./artifacts/newspack-elections.zip
           plugin-dirname: "newspack-elections"
           format: "zip"
           filename-format: "{name}.{version}"
