small tweak to creating the zip artifact

--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -48,6 +48,9 @@ jobs:
           plugin-dirname: "newspack-elections"
           format: "zip"
           filename-format: "{name}.{version}"
+	
+      - name: Rename readme from md to txt
+        run: touch ./artifacts/.keep
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
