--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@emotion/styled": "^11.13.5",
     "@mona-health/react-input-mask": "^3.0.3",
     "@wordpress/icons": "^10.9.0",
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "date-fns": "^4.1.0"
   },
   "devDependencies": {
     "@wordpress/scripts": "^30.1.0",
