--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "config": {
     "entrypoints": {
-      "editor": "./src/editor/index.js",
+      "profile-editor": "./src/profile-editor/index.js",
       "admin": "./src/admin/index.js",
       "importer": "./src/importer/index.js",
       "frontend": "./src/frontend/index.js",
